# lisp

./: .gitignore  .gitmodules  Makefile.am  configure-test  configure.ac
simplelib/: .gitignore  README  configure.ac
simplelib/src/: Makefile.am  argparser.c  argparser.h  assert.c  assert.h  bits.c  bits.h  bits_fx.inc  bits_sg.inc  io.c  io.h  list.c  list.h  mpool.c  mpool.h  ofchk.c  ofchk.h  ofchk.intern.h  rand.c  rand.h  types.h
simplelib/test/: Makefile.am  tester.makefile  tester.sh
simplelib/test/argparser/: common.h  func.c  main.c  makefile  test.c
simplelib/test/bits/: common.c  common.h  main.c  makefile  test3.inc  tests.c  tests.h
simplelib/test/mpool/: common.h  main.c  makefile  test0.inc  test1.inc  tests.c  tests.h
src/: Makefile.am  clear.c  clear.h  error.c  error.h  fio.c  fio.h  fio_file.c  fio_file.h  fio_part.c  fio_part.h  inter.h  inter_core.c  inter_core.h  inter_io.c  inter_kw.h  keywords-math.c  keywords.c  keywords.h  lib  lisp.c  lisp.h  load.c  load.h  math.h  memory.c  memory.h  memory_std.c  memory_std.h  options.h  parse.c  parse.h  repl.c  snode_wrapper.c  snode_wrapper.h  string-str2int.inc  string.c  string.h  strmath.c  strmath.h  (+1 more)
src/strmath/: lowlevel.c  misc.c  unsigned.c
test/: Makefile.am  makefile  master.makefile  zxs2raw.lisp
test/-fio/: assert.c  assert.h  chekers.c  chekers.h  comm.h  lisp  main.c  main.stress-bit.c  main.stress-byte.c  makefile  string.c  string.h
test/-fio/samples/: file-r  file-rw
test/lisp/: eval-5-or-6.lisp  guts.c  guts.h  list-sort.lisp  main.c  makefile  multi00.lisp  multi01.lisp
test/strmath/: common.h  guts.c  main.c  memory.c
txt/: lisp-specification.txt  redefined-keywords.lisp  scheme.txt
